--- a/WebpackToViteMigration/package.json
+++ b/WebpackToViteMigration/package.json
@@ -2,17 +2,22 @@
   "name": "10-react-project",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
   "main": "index.js",
   "scripts": {
-    "build": "webpack build --config webpack.config.js",
-    "serve": "webpack serve --config webpack.config.js"
+    "build": "vite build",
+    "serve": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1"
@@ -21,10 +26,10 @@
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite-plugin-eslint": "^1.8.1",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-loader": "^4.0.2",
@@ -35,13 +40,11 @@
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
-    "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
     "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "vite": "^5.0.10",
+    "vite-plugin-html": "^3.2.1",
+    "vite-plugin-html-purgecss": "^0.1.1",
+    "vite-plugin-static-copy": "^1.0.0"
   }
 }
