--- a/ModuleFederationWebpackToVite/HomePageApp/package.json
+++ b/ModuleFederationWebpackToVite/HomePageApp/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +14,7 @@
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
